test/types/atomic/vass/read-atomics-2.good
read-atomics-2.chpl:3: error: direct access to an atomic variable, 'a', is prohibited, use read() instead
